--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -4,11 +4,6 @@ default:
     suites:
         default:
             path: %paths.base%/features
-            contexts:
-                - Knp\FriendlyContexts\Context\MinkContext
-                - Knp\FriendlyContexts\Context\TableContext
-                - Knp\FriendlyContexts\Context\EntityContext
-                - Knp\FriendlyContexts\Context\AliceContext
-                - Knp\FriendlyContexts\Context\PageContext
+            contexts: ~
     extensions:
-        Knp\FriendlyContexts\Extension: ~
+        Knp\FriendlyExtension: ~
