--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,12 @@
     "require": {
         "php": ">=5.4.0",
         "behat/behat": "~3.0",
-        "symfony/property-access": "~2.3|~3.0",
+        "symfony/property-access": "~2.3|~3.0|~4.0",
         "doctrine/inflector": "~1.0",
         "doctrine/data-fixtures": "~1.0",
         "behat/mink-extension": "~2.0",
         "fzaninotto/faker": "~1.4",
-        "nelmio/alice": "~2.0",
+        "nelmio/alice": "~3.0",
         "guzzle/guzzle": "~3.7"
     },
     "require-dev": {
